--- a/EducationAlarm/EducationAlarm/Web.config
+++ b/EducationAlarm/EducationAlarm/Web.config
@@ -10,7 +10,8 @@
   </configSections>
   <connectionStrings>
     <!--<add name="AlarmContext" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=AlarmEduDb;Intergrated Security=true;" providerName="System.Data.SqlClient" />-->
-    <add name="AlarmContext" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-EducationAlarm-20220327023651.mdf;Initial Catalog=EducationAlarm;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="AlarmContext" connectionString="Data Source=wdb3.my-hosting-panel.com;Initial Catalog=bizassis_educationalarm;Persist Security Info=False;User ID=bizassis_admin;Password=TrustinHashem1;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;" providerName="System.Data.SqlClient" />
+    <!--  <add name="AlarmContext" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-EducationAlarm-20220327023651.mdf;Initial Catalog=EducationAlarm;Integrated Security=True" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -22,8 +23,10 @@
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
+    <customErrors mode="Off" />
   </system.web>
   <system.webServer>
+    <httpErrors errorMode="Detailed" />
     <modules>
       <remove name="FormsAuthentication" />
     </modules>
@@ -74,6 +77,10 @@
         <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.6.0" newVersion="4.0.6.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <entityFramework>
@@ -82,10 +89,4 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-  <system.codedom>
-    <compilers>
-      <compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:1659;1699;1701" />
-      <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
-    </compilers>
-  </system.codedom>
 </configuration>
